kubernetes/infra/network/gateway/ns.yaml
# gateway namespace - Vegard: "group cluster operator related resources"
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
